@@ -18,6 +18,7 @@ depth: 1
  * Always set help text element ID for form fields with help text in `field.html` template (Sage Abdullah)
  * Move `SnippetViewSet` menu registration mechanism to base `ViewSet` class (Sage Abdullah)
  * Enable reference index tracking for models registered with `ModelViewSet` (Sage Abdullah)
+ * When copying a page, copy its view restrictions to the destination (Sandeep Choudhary)
 
 ### Bug fixes
 
