@@ -8,6 +8,7 @@ Changelog
  * Always set help text element ID for form fields with help text in `field.html` template (Sage Abdullah)
  * Move `SnippetViewSet` menu registration mechanism to base `ViewSet` class (Sage Abdullah)
  * Enable reference index tracking for models registered with `ModelViewSet` (Sage Abdullah)
+ * When copying a page, copy its view restrictions to the destination (Sandeep Choudhary)
  * Fix: Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
  * Maintenance: Fix snippet search test to work on non-fallback database backends (Matt Westcott)
  * Maintenance: Update Eslint, Prettier & Jest npm packages (LB (Ben) Johnston)
